--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="intro-content child">
         <div class="intro-group">
           <div class="vertical-line">
-            <div class="yellow-dot"></div>
+            <div class="yellow-dot-in-bg"></div>
             <lottie-player
               src="https://assets1.lottiefiles.com/private_files/lf30_ff3y87y4.json"
               background="transparent"
@@ -42,11 +42,11 @@
             </lottie-player>
           </div>
           <div>
-            <h1>Hello there</h1>
-            <p>
-              I am an observer of digital design with focus on UI, UX &
-              Frontend.
-            </p>
+            <h1 class="media-h1">Hello</h1>
+            <div class="circle-bg-media circle-bg-media1">
+              <p class="media-p">I'm Oda Alida.</p>
+              <p class="media-paragraph">A digital designer & more.</p>
+            </div>
           </div>
         </div>
         <img
@@ -60,9 +60,9 @@
         <div class="child-container">
           <div class="background-img backgroundimg1"></div>
           <div class="bg-line bg-line1">
-            <h2>ReThink — Vaccine</h2>
+            <h2 class="project-title-media">ReThink — Vaccine</h2>
             <a href="project-one.html">
-              <h2>View project</h2>
+              <h2 class="project-title-media">View project</h2>
             </a>
           </div>
         </div>
@@ -71,8 +71,10 @@
         <div class="child-container">
           <div class="background-img backgroundimg2"></div>
           <div class="bg-line bg-line2">
-            <h2>Grazette — Advent Calender</h2>
-            <a href="project-one.html"> <h2 id="color-h2">View project</h2></a>
+            <h2 class="project-title-media">Grazette — Advent Calender</h2>
+            <a class="project-title-media" href="project-one.html">
+              <h2 id="color-h2">View project</h2></a
+            >
           </div>
         </div>
       </section>
@@ -80,8 +82,10 @@
         <div class="child-container">
           <div class="background-img backgroundimg3"></div>
           <div class="bg-line bg-line3">
-            <h2>Rudolf Steinerskolan Re-design</h2>
-            <a href="project3.html"> <h2>View project</h2></a>
+            <h2 class="project-title-media">Rudolf Steinerskolan Re-design</h2>
+            <a class="project-title-media" href="project3.html">
+              <h2>View project</h2></a
+            >
           </div>
         </div>
       </section>
@@ -89,8 +93,10 @@
         <div class="child-container">
           <div class="background-img backgroundimg4"></div>
           <div class="bg-line bg-line4">
-            <h2>Smoove — Light Cycle</h2>
-            <a href="projet4.html"> <h2>View project</h2></a>
+            <h2 class="project-title-media">Smoove — Light Cycle</h2>
+            <a class="project-title-media" href="projet4.html">
+              <h2>View project</h2></a
+            >
           </div>
         </div>
       </section>
