--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <div>
             <h1 class="media-h1">Hello</h1>
-            <div class="circle-bg-media circle-bg-media1">
+            <div class="circle-bg-media">
               <p class="media-p">I'm Oda Alida.</p>
               <p class="media-paragraph">A digital designer & more.</p>
             </div>
