--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           <div class="background-img backgroundimg2"></div>
           <div class="bg-line bg-line2">
             <h2 class="project-title-media">Grazette — Advent Calender</h2>
-            <a class="project-title-media" href="project-one.html">
-              <h2 id="color-h2">View project</h2></a
+            <a href="project-one.html">
+              <h2 class="project-title-media" id="color-h2">View project</h2></a
             >
           </div>
         </div>
@@ -83,8 +83,8 @@
           <div class="background-img backgroundimg3"></div>
           <div class="bg-line bg-line3">
             <h2 class="project-title-media">Rudolf Steinerskolan Re-design</h2>
-            <a class="project-title-media" href="project3.html">
-              <h2>View project</h2></a
+            <a href="project3.html">
+              <h2 class="project-title-media">View project</h2></a
             >
           </div>
         </div>
@@ -94,8 +94,8 @@
           <div class="background-img backgroundimg4"></div>
           <div class="bg-line bg-line4">
             <h2 class="project-title-media">Smoove — Light Cycle</h2>
-            <a class="project-title-media" href="projet4.html">
-              <h2>View project</h2></a
+            <a href="projet4.html">
+              <h2 class="project-title-media">View project</h2></a
             >
           </div>
         </div>
