--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <main class="flex-container">
       <div class="header">
-        <a class="logo" href="index.html">ODA ALIDA</a>
+        <a class="logo" href="index.html">O A</a>
         <nav class="topnav">
           <a id="menu-btn" class="nav-button" href="#"
             ><img src="img/menu.svg" width="30px" alt="menu-button"
@@ -42,10 +42,20 @@
             </lottie-player>
           </div>
           <div>
-            <h1 class="media-h1">Hello</h1>
+            <h1 class="media-h1">ODA ALIDA</h1>
             <div class="circle-bg-media">
-              <p class="media-p">I'm Oda Alida.</p>
               <p class="media-paragraph">A digital designer & more.</p>
+            </div>
+            <div class="animation-line-media">
+              <lottie-player
+                src="https://assets1.lottiefiles.com/private_files/lf30_ff3y87y4.json"
+                background="transparent"
+                speed="1"
+                style="width: 50px; height: 200px"
+                loop
+                autoplay
+              >
+              </lottie-player>
             </div>
           </div>
         </div>
@@ -71,7 +81,7 @@
         <div class="child-container">
           <div class="background-img backgroundimg2"></div>
           <div class="bg-line bg-line2">
-            <h2 class="project-title-media">Grazette — Advent Calender</h2>
+            <h2 class="project-title-media">Grazette</h2>
             <a href="project-one.html">
               <h2 class="project-title-media" id="color-h2">View project</h2></a
             >
@@ -82,7 +92,7 @@
         <div class="child-container">
           <div class="background-img backgroundimg3"></div>
           <div class="bg-line bg-line3">
-            <h2 class="project-title-media">Rudolf Steinerskolan Re-design</h2>
+            <h2 class="project-title-media">Rudolf Steinerskolan</h2>
             <a href="project3.html">
               <h2 class="project-title-media">View project</h2></a
             >
@@ -102,28 +112,38 @@
       </section>
       <section class="child">
         <div class="image-fit textbox color-textbox">
-          <div class="text-container">
+          <div class="text-container-quote">
             <p class="paragraph-quote">
               "I also love; bargain second hand, play board games, drink cava,
               watch Friends (the TV-show), photograph other people's dogs
               (allergic), travel, eat ice cream."
             </p>
-
-            <div class="about">
-              <a class="page-hover" href="about.html">More curious?</a>
-            </div>
           </div>
         </div>
       </section>
       <footer class="footer child">
         <div class="footer-container">
-          <a class="" href="project.html">
-            <h2 class="view-all page-hover">View all projects</h2>
-          </a>
+          <h2 class="work-together page-hover">Let's work together!</h2>
           <h3 class="footer-left">hello@odaalida.com</h3>
-          <img src="img/instagram.svg" alt="instagram button" />
-          <img src="img/linkedin.svg" alt="linkedin button" />
-          <h3 class="footer-right">Oda Alida©2021</h3>
+          <div class="social-buttons">
+            <img
+              src="img/instagram.svg"
+              width="44px"
+              height="44px"
+              alt="instagram button"
+            />
+            <a
+              href="www.linkedin.com/in/oda-alida-bjørke-54652938
+            "
+              target="_blank"
+              ><img
+                src="img/linkedin.svg"
+                width="44px"
+                height="44px"
+                alt="linkedin button"
+            /></a>
+          </div>
+          <h3 class="copywright">Oda Alida©2021</h3>
         </div>
       </footer>
     </main>
