--- a/project-one.html
+++ b/project-one.html
@@ -13,7 +13,7 @@
   <body>
     <main class="flex-container">
       <div class="header">
-        <a class="logo logo-project1" href="index.html">ODA ALIDA</a>
+        <a class="logo logo-project1" href="index.html">O A</a>
         <nav class="topnav">
           <a id="menu-btn" class="nav-button" href="#"
             ><img src="img/menu.svg" width="30px" alt="menu-button"
