--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
 <body id="change-bg">
     <main class="flex-container">
         <div class="header">
-            <a class="logo" href="index.html">ODA ALIDA</a>
+            <a class="logo" href="index.html">O A</a>
             <nav class="topnav">
                 <a id="menu-btn" class="nav-button" href="#"><img src="img/menu.svg" width="30px" alt="menu-button"></a>
                 <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
