--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main class="flex-container">
       <div class="header">
         <a class="logo" href="index.html">O A</a>
+        <a class="logo-media" href="index.html">ODA ALIDA</a>
         <nav class="topnav">
           <a id="menu-btn" class="nav-button" href="#"
             ><img src="img/menu.svg" width="30px" alt="menu-button"
@@ -23,8 +24,8 @@
         <div id="mylinks" class="my-menu">
           <a class="menu-categori" href="project.html">Projects</a>
           <a class="menu-categori" href="forfun.html">A grid of fun</a>
-          <a class="menu-categori" href="about.html">About</a>
-          <a class="menu-categori" href="contact.html">Contact</a>
+          <!-- <a class="menu-categori" href="about.html">About</a> -->
+          <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
       </div>
       <div class="intro-content child">
