--- a/project-one.html
+++ b/project-one.html
@@ -23,8 +23,8 @@
         <div id="mylinks" class="my-menu">
           <a class="menu-categori" href="project.html">Projects</a>
           <a class="menu-categori" href="forfun.html">A grid of fun</a>
-          <a class="menu-categori" href="about.html">About</a>
-          <a class="menu-categori" href="contact.html">Contact</a>
+          <!-- <a class="menu-categori" href="about.html">About</a> -->
+          <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
       </div>
       <!-- header starts -->
