--- a/project.html
+++ b/project.html
@@ -1,54 +1,96 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css">
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css">
+    <title>odaalida.com</title>
+  </head>
 
-
-    <title>Pojects</title>
-</head>
-
-<body id="change-bg">
+  <body id="change-bg">
     <main class="flex-container">
-        <div class="header">
-            <a class="logo" href="index.html">O A</a>
-            <nav class="topnav">
-                <a id="menu-btn" class="nav-button" href="#"><img src="img/menu.svg" width="30px" alt="menu-button"></a>
-                <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
-            </nav>
-            <div id="mylinks" class="my-menu">
-                <a class="menu-categori" href="project.html">Projects</a>
-                <a class="menu-categori" href="forfun.html">A grid of fun</a>
-                <a class="menu-categori" href="about.html">About</a>
-                <a class="menu-categori" href="contact.html">Contact</a>
-            </div>
+      <div class="header">
+        <a class="logo" href="index.html">O A</a>
+        <a class="logo-media" href="index.html">ODA ALIDA</a>
+        <nav class="topnav">
+          <a id="menu-btn" class="nav-button" href="#"
+            ><img src="img/menu.svg" width="30px" alt="menu-button"
+          /></a>
+          <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
+        </nav>
+        <div id="mylinks" class="my-menu">
+          <a class="menu-categori" href="project.html">Projects</a>
+          <a class="menu-categori" href="forfun.html">A grid of fun</a>
+          <!-- <a class="menu-categori" href="about.html">About</a> -->
+          <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
-        <div class="grid-container-right">
-            <img src="img/904X610.jpg" alt="" width="100%" onmouseover="chbg('#ffee95')" onmouseout="chbg('#fff')">
-            <img src="img/440X610.jpg" alt="" width="100%" onmouseover="chbg('#C698DB')" onmouseout="chbg('#fff')">
+      </div>
+      <div class="grid-container-right">
+        <img
+          src="img/904X610.jpg"
+          alt=""
+          width="100%"
+          onmouseover="chbg('#ffee95')"
+          onmouseout="chbg('#fff')"
+        />
+        <h4>Odaalida.com</h4>
+        <p class="project-p">Web-design, UX, UI</p>
+        <img
+          src="img/440X610.jpg"
+          alt=""
+          width="100%"
+          onmouseover="chbg('#C698DB')"
+          onmouseout="chbg('#fff')"
+        />
+        <h4>ReThink — Vaccine</h4>
+        <p class="project-p">Web-design, UI</p>
+      </div>
+      <div class="grid-container-right">
+        <img
+          src="img/904X610.jpg"
+          alt=""
+          width="100%"
+          onmouseover="chbg('#92CB9C')"
+          onmouseout="chbg('#fff')"
+        />
+        <h4>Rudolf Steinerskolan</h4>
+        <p class="project-p">App-design, UI, UX</p>
+        <img
+          src="img/440X610.jpg"
+          alt=""
+          width="100%"
+          onmouseover="chbg('#ffee95')"
+          onmouseout="chbg('#fff')"
+        />
+        <h4>Smoove — Light Cycle</h4>
+        <p class="project-p">App-design, UI, UX</p>
+      </div>
+      <div class="grid-container-left">
+        <img
+          src="img/440X610.jpg"
+          alt=""
+          width="100%"
+          onmouseover="chbg('#ffee95')"
+          onmouseout="chbg('#fff')"
+        />
+        <img
+          src="img/904X610.jpg"
+          alt=""
+          width="100%"
+          onmouseover="chbg('#ffee95')"
+          onmouseout="chbg('#fff')"
+        />
+      </div>
 
-        </div>
-        <div class="grid-container-right">
-            <img src="img/904X610.jpg" alt="" width="100%" onmouseover="chbg('#92CB9C')" onmouseout="chbg('#fff')">
-            <img src="img/440X610.jpg" alt="" width="100%" onmouseover="chbg('#ffee95')" onmouseout="chbg('#fff')">
-        </div>
-        <div class="grid-container-left">
-            <img src="img/440X610.jpg" alt="" width="100%" onmouseover="chbg('#ffee95')" onmouseout="chbg('#fff')">
-            <img src="img/904X610.jpg" alt="" width="100%" onmouseover="chbg('#ffee95')" onmouseout="chbg('#fff')">
-        </div>
-
-        <!-- <div class="img-column">
+      <!-- <div class="img-column">
         <img src="img/odaalida_07.jpg" alt="bild" width="910" height="610">
         <img src="img/odaalida_09.jpg" alt="bild" width="440" height="610">
-    </div> -->
-
-        <script src="script.js"></script>
-        <script src="bg-color.js"></script>
-
-</body>
-
+      </div> -->
+    </main>
+    <script src="script.js"></script>
+    <script src="bg-color.js"></script>
+  </body>
 </html>
