--- a/forfun.html
+++ b/forfun.html
@@ -7,28 +7,38 @@
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
-    <title>About</title>
+    <title>odaalida.com</title>
   </head>
-  <body class="about-bg-color">
-    <div>
-      <main class="flex-container">
-        <div class="header">
-          <a class="logo logoabout" href="index.html">O A</a>
-          <nav class="topnav">
-            <a id="menu-btn" class="nav-button" href="#"
-              ><img src="img/menu.svg" width="30px" alt="menu-button"
-            /></a>
-            <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
-          </nav>
-          <div id="mylinks" class="my-menu">
-            <a class="menu-categori" href="project.html">Projects</a>
-            <a class="menu-categori" href="forfun.html">A grid of fun</a>
-            <a class="menu-categori" href="about.html">About me</a>
-            <a class="menu-categori" href="contact.html">Say hello</a>
-          </div>
+
+  <body>
+    <main class="flex-container">
+      <div class="header">
+        <a class="logo" href="index.html">O A</a>
+        <a class="logo-media" href="index.html">ODA ALIDA</a>
+        <nav class="topnav">
+          <a id="menu-btn" class="nav-button" href="#"
+            ><img src="img/menu.svg" width="30px" alt="menu-button"
+          /></a>
+          <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
+        </nav>
+        <div id="mylinks" class="my-menu">
+          <a class="menu-categori" href="project.html">Projects</a>
+          <a class="menu-categori" href="forfun.html">A grid of fun</a>
+          <!--  <a class="menu-categori" href="about.html">About</a>-->
+          <a class="menu-categori menu-4" href="contact.html">Info </a>
         </div>
-      </main>
+      </div>
+    </main>
+    <div class="fun-grid-container">
+      <article class="item-1"></article>
+      <article class="item-2"></article>
+      <article class="item-3"></article>
+      <article class="item-4"></article>
+      <article class="item-5"></article>
+      <article class="item-6"></article>
+      <article class="item-7"></article>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
