--- a/info.html
+++ b/info.html
@@ -27,6 +27,30 @@
             <a class="menu-categori" href="info.html">Info</a>
           </div>
         </div>
+
+        <div class="about-wrapper">
+          <h2>Hi! I am Oda Alida Bjørke</h2>
+          <p class="paragraph-20">
+            I am a norwegian digital designer based in Gothenburg. I have an
+            additional, extensive background within photography. Check out my
+            photography here. Two years ago, I decided to add the Designer title
+            to my resume, and are currently studying Digital Designer at YRGO.
+            My ambition is to join a joyfull team of creatives!
+          </p>
+          <img
+            src="img/Group 11oda_portrait.png"
+            alt="portrait of me"
+            transparent
+          />
+          <h2>Software skills</h2>
+          <p class="paragraph-20">
+            Figma, HTML & CSS, Illustrator, InDesign, Photohop, Sketch, After
+            Effects, pen&paper.
+          </p>
+          <h2>Education</h2>
+          <p></p>
+          <h2>Resume</h2>
+        </div>
       </main>
     </div>
     <script src="script.js"></script>
