--- a/project.html
+++ b/project.html
@@ -28,67 +28,93 @@
           <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
       </div>
-      <div class="grid-container-right">
-        <img
-          src="img/904X610.jpg"
-          alt=""
-          width="100%"
-          onmouseover="chbg('#ffee95')"
-          onmouseout="chbg('#fff')"
-        />
-        <h4>Odaalida.com</h4>
-        <p class="project-p">Web-design, UX, UI</p>
-        <img
-          src="img/440X610.jpg"
-          alt=""
-          width="100%"
-          onmouseover="chbg('#C698DB')"
-          onmouseout="chbg('#fff')"
-        />
-        <h4>ReThink — Vaccine</h4>
-        <p class="project-p">Web-design, UI</p>
+      <div class="case-top case-wrapper-row">
+        <div class="case-container-column">
+          <div
+            class="case-img-size case-1"
+            onmouseover="chbg('#FFEE95')"
+            onmouseout="chbg('#fff')"
+          ></div>
+          <div>
+            <h4>Odaalida.com</h4>
+            <p class="paragraph-20">Web-design, UX, UI</p>
+          </div>
+        </div>
+        <div class="case-container-column">
+          <div
+            class="case-img-size case-2"
+            onmouseover="chbg('#C698DB')"
+            onmouseout="chbg('#fff')"
+          ></div>
+          <div>
+            <h4>ReThink — Vaccine</h4>
+            <p class="paragraph-20">Web-design, UX, UI</p>
+          </div>
+        </div>
       </div>
-      <div class="grid-container-right">
-        <img
-          src="img/904X610.jpg"
-          alt=""
-          width="100%"
-          onmouseover="chbg('#92CB9C')"
-          onmouseout="chbg('#fff')"
-        />
-        <h4>Rudolf Steinerskolan</h4>
-        <p class="project-p">App-design, UI, UX</p>
-        <img
-          src="img/440X610.jpg"
-          alt=""
-          width="100%"
-          onmouseover="chbg('#ffee95')"
-          onmouseout="chbg('#fff')"
-        />
-        <h4>Smoove — Light Cycle</h4>
-        <p class="project-p">App-design, UI, UX</p>
+      <div class="case-wrapper-row">
+        <div class="case-container-column">
+          <div
+            class="case-img-size case-3"
+            onmouseover="chbg('#92CB9C')"
+            onmouseout="chbg('#fff')"
+          ></div>
+          <div>
+            <h4>Rudolf Steinerskolan</h4>
+            <p class="paragraph-20">Web-design, UX, UI</p>
+          </div>
+        </div>
+        <div class="case-container-column">
+          <div
+            class="case-img-size case-4"
+            onmouseover="chbg('#00C690')"
+            onmouseout="chbg('#fff')"
+          ></div>
+          <div>
+            <h4>Smoove Light Cycle</h4>
+            <p class="paragraph-20">Web-design, UX, UI</p>
+          </div>
+        </div>
       </div>
-      <div class="grid-container-left">
-        <img
-          src="img/440X610.jpg"
-          alt=""
-          width="100%"
-          onmouseover="chbg('#ffee95')"
-          onmouseout="chbg('#fff')"
-        />
-        <img
-          src="img/904X610.jpg"
-          alt=""
-          width="100%"
-          onmouseover="chbg('#ffee95')"
-          onmouseout="chbg('#fff')"
-        />
+      <div class="case-wrapper-row last-row">
+        <div class="case-container-column case-empty"></div>
+        <div class="case-container-column">
+          <div
+            class="case-img-size case-5"
+            onmouseover="chbg('#FF95BB')"
+            onmouseout="chbg('#fff')"
+          ></div>
+          <div>
+            <h4>View a grid of fun</h4>
+          </div>
+        </div>
       </div>
 
-      <!-- <div class="img-column">
-        <img src="img/odaalida_07.jpg" alt="bild" width="910" height="610">
-        <img src="img/odaalida_09.jpg" alt="bild" width="440" height="610">
-      </div> -->
+      <footer class="footer">
+        <div class="footer-container">
+          <h2 class="work-together page-hover">Let's work together!</h2>
+          <h3 class="footer-left">hello@odaalida.com</h3>
+          <div class="social-buttons">
+            <img
+              src="img/instagram.svg"
+              width="44px"
+              height="44px"
+              alt="instagram button"
+            />
+            <a
+              href="www.linkedin.com/in/oda-alida-bjørke-54652938
+            "
+              target="_blank"
+              ><img
+                src="img/linkedin.svg"
+                width="44px"
+                height="44px"
+                alt="linkedin button"
+            /></a>
+          </div>
+          <h3 class="copywright">Oda Alida©2021</h3>
+        </div>
+      </footer>
     </main>
     <script src="script.js"></script>
     <script src="bg-color.js"></script>
