--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="child-container">
           <div class="background-img backgroundimg1"></div>
           <div class="bg-line bg-line1">
-            <h2 class="project-title-media">ReThink — Vaccine</h2>
+            <h2 class="project-title-media">Odaalida.com</h2>
             <a href="project-one.html">
               <h2 class="project-title-media">View project</h2>
             </a>
@@ -82,9 +82,9 @@
         <div class="child-container">
           <div class="background-img backgroundimg2"></div>
           <div class="bg-line bg-line2">
-            <h2 class="project-title-media">Grazette</h2>
+            <h2 class="project-title-media">ReThink — Vaccine</h2>
             <a href="project-one.html">
-              <h2 class="project-title-media" id="color-h2">View project</h2></a
+              <h2 class="project-title-media">View project</h2></a
             >
           </div>
         </div>
