--- a/project.html
+++ b/project.html
@@ -30,11 +30,14 @@
       </div>
       <div class="case-top case-wrapper-row">
         <div class="case-container-column">
-          <div
-            class="case-img-size case-1"
-            onmouseover="chbg('#FFEE95')"
-            onmouseout="chbg('#fff')"
-          ></div>
+          <a href="project-one.html"
+            ><div
+              class="case-img-size case-1"
+              onmouseover="chbg('#FFEE95')"
+              onmouseout="chbg('#fff')"
+            ></div
+          ></a>
+
           <div>
             <h4>Odaalida.com</h4>
             <p class="paragraph-20">Web-design, UX, UI</p>
