--- a/project-two.html
+++ b/project-two.html
@@ -33,11 +33,11 @@
           <div class="project-img project-img1"></div>
           <div class="project-color-rectangle project-color-rectangle1">
             <div class="project-row1">
-              <h2 class="project-title-media">ReThink — Vaccine</h2>
+              <h2>ReThink — Vaccine</h2>
             </div>
             <div class="project-row2">
               <div class="project-column2">
-                <h4 class="project-title-media">Role</h4>
+                <h4>Role</h4>
                 <p>UX-design</p>
                 <p>UI-design</p>
                 <p>Copywriting</p>
