--- a/info.html
+++ b/info.html
@@ -9,14 +9,19 @@
 
     <title>About</title>
   </head>
-  <body class="about-bg-color">
+  <body class="info-bg-color">
     <div>
       <main class="flex-container">
         <div class="header">
           <a class="logo logoabout" href="index.html">O A</a>
+          <a class="logo-media logo-white" href="index.html">ODA ALIDA</a>
           <nav class="topnav">
             <a id="menu-btn" class="nav-button" href="#"
-              ><img src="img/menu.svg" width="30px" alt="menu-button"
+              ><img
+                class="menu-white"
+                src="img/menu.svg"
+                width="30px"
+                alt="menu-button"
             /></a>
             <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
           </nav>
@@ -28,28 +33,47 @@
           </div>
         </div>
 
-        <div class="about-wrapper">
-          <h2>Hi! I am Oda Alida Bjørke</h2>
-          <p class="paragraph-20">
-            I am a norwegian digital designer based in Gothenburg. I have an
-            additional, extensive background within photography. Check out my
-            photography here. Two years ago, I decided to add the Designer title
-            to my resume, and are currently studying Digital Designer at YRGO.
-            My ambition is to join a joyfull team of creatives!
+        <div class="info-wrapper">
+          <div class="first-part-incl-img">
+            <div class="first-part-container">
+              <h2 class="h2-info">Hi! I am Oda Alida Bjørke</h2>
+              <div class="media-h2-img-wrapper">
+                <h2 class="h2-hide h2-info">Hi! I am Oda Alida Bjørke</h2>
+                <img
+                  class="media-info-portrait"
+                  src="img/Group 11oda_portrait.png"
+                  alt="portrait of me"
+                  transparent
+                />
+              </div>
+              <p class="paragraph-info">
+                I am a norwegian digital designer based in Gothenburg. <br />
+                I have an additional, extensive background within photography.
+                Check out my photography
+                <a class="yellow-word" href="photography.html">here</a>. <br />
+                <br />
+                Two years ago, I decided to add the Designer title to my resume,
+                and are currently studying Digital Designer at YRGO. My ambition
+                is to join a joyfull team of creatives!
+              </p>
+            </div>
+            <img
+              class="info-portrait"
+              src="img/Group 11oda_portrait.png"
+              alt="portrait of me"
+              transparent
+            />
+          </div>
+          <h2 class="h2-info">Tools skills</h2>
+          <p class="paragraph-info">
+            Figma, HTML & CSS, Illustrator, InDesign, Photohop, <br />
+            Sketch, After Effects, pen&paper.
           </p>
-          <img
-            src="img/Group 11oda_portrait.png"
-            alt="portrait of me"
-            transparent
-          />
-          <h2>Software skills</h2>
-          <p class="paragraph-20">
-            Figma, HTML & CSS, Illustrator, InDesign, Photohop, Sketch, After
-            Effects, pen&paper.
-          </p>
-          <h2>Education</h2>
-          <p></p>
-          <h2>Resume</h2>
+          <h2 class="h2-info">Education</h2>
+          <p class="paragraph-info">Yrgo, Digital Designer — 2021-current</p>
+          <p class="paragraph-info">Yrgo, Photography — 2013-2015</p>
+          <h2 class="h2-info">Resume</h2>
+          <p class="paragraph-info yellow-word">Click here</p>
         </div>
       </main>
     </div>
