--- a/project-one.html
+++ b/project-one.html
@@ -33,18 +33,18 @@
           <div class="project-img project-img1"></div>
           <div class="project-color-rectangle project-color-rectangle1">
             <div class="project-row1">
-              <h2 class="project-title-media">ReThink — Vaccine</h2>
+              <h2 class="inside-project-title-media">Odaalida.com</h2>
             </div>
             <div class="project-row2">
               <div class="project-column2">
-                <h4 class="project-title-media">Role</h4>
-                <p>UX-design</p>
+                <h4>Role</h4>
                 <p>UI-design</p>
-                <p>Copywriting</p>
+                <p>Web-design</p>
               </div>
               <div class="project-column2">
                 <h4>Tools</h4>
-                <p>Sketch</p>
+                <p>Visual Studio Code</p>
+                <p>HTML & CSS</p>
               </div>
               <div class="project-column2">
                 <h4>Team</h4>
@@ -52,7 +52,7 @@
               </div>
               <div class="project-column2">
                 <h4>Case</h4>
-                <p>Vaccine</p>
+                <p>Portfolio</p>
               </div>
             </div>
           </div>
