--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="animation.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
@@ -72,9 +73,11 @@
           <div class="background-img backgroundimg1"></div>
           <div class="bg-line bg-line1">
             <h2 class="project-title-media">Odaalida.com</h2>
-            <a href="project-one.html">
-              <h2 class="project-title-media">View project</h2>
-            </a>
+            <div class="animation-parent">
+              <a href="project-one.html">
+                <h2 class="project-title-media line-animation">View project</h2>
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -83,9 +86,13 @@
           <div class="background-img backgroundimg2"></div>
           <div class="bg-line bg-line2">
             <h2 class="project-title-media">ReThink — Vaccine</h2>
-            <a href="project-one.html">
-              <h2 class="project-title-media">View project</h2></a
-            >
+            <div class="animation-parent">
+              <a href="project-one.html">
+                <h2 class="project-title-media line-animation">
+                  View project
+                </h2></a
+              >
+            </div>
           </div>
         </div>
       </section>
@@ -94,9 +101,13 @@
           <div class="background-img backgroundimg3"></div>
           <div class="bg-line bg-line3">
             <h2 class="project-title-media">Rudolf Steinerskolan</h2>
-            <a href="project3.html">
-              <h2 class="project-title-media">View project</h2></a
-            >
+            <div class="animation-parent">
+              <a href="project3.html">
+                <h2 class="project-title-media line-animation">
+                  View project
+                </h2></a
+              >
+            </div>
           </div>
         </div>
       </section>
@@ -105,9 +116,13 @@
           <div class="background-img backgroundimg4"></div>
           <div class="bg-line bg-line4">
             <h2 class="project-title-media">Smoove — Light Cycle</h2>
-            <a href="projet4.html">
-              <h2 class="project-title-media">View project</h2></a
-            >
+            <div class="animation-parent">
+              <a href="projet4.html">
+                <h2 class="project-title-media line-animation">
+                  View project
+                </h2></a
+              >
+            </div>
           </div>
         </div>
       </section>
