--- a/forfun.html
+++ b/forfun.html
@@ -24,21 +24,41 @@
         <div id="mylinks" class="my-menu">
           <a class="menu-categori" href="project.html">Projects</a>
           <a class="menu-categori" href="forfun.html">A grid of fun</a>
-          <!--  <a class="menu-categori" href="about.html">About</a>-->
-          <a class="menu-categori menu-4" href="contact.html">Info </a>
+          <a class="menu-categori menu-4" href="info.html">Info </a>
         </div>
       </div>
     </main>
-    <div class="fun-grid-container">
-      <article class="item-1"></article>
-      <article class="item-2"></article>
-      <article class="item-3"></article>
-      <article class="item-4"></article>
-      <article class="item-5"></article>
-      <article class="item-6"></article>
-      <article class="item-7"></article>
+
+    <div class="of-fun-wrapper">
+      <p class="of-fun-p">This page is under construction</p>
+      <img class="of-fun-img" src="img/two_dogs.jpg" alt="image of two dogs" />
     </div>
 
+    <footer class="footer child">
+      <div class="footer-container">
+        <h2 class="work-together page-hover">Let's work together!</h2>
+        <h3>hello@odaalida.com</h3>
+        <div class="social-buttons">
+          <img
+            src="img/instagram.svg"
+            width="44px"
+            height="44px"
+            alt="instagram button"
+          />
+          <a
+            href="www.linkedin.com/in/oda-alida-bjørke-54652938
+          "
+            target="_blank"
+            ><img
+              src="img/linkedin.svg"
+              width="44px"
+              height="44px"
+              alt="linkedin button"
+          /></a>
+        </div>
+        <h3 class="copywright">Oda Alida©2021</h3>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
