--- a/index.html
+++ b/index.html
@@ -60,12 +60,21 @@
               </lottie-player>
             </div>
           </div>
+          <!-- <div class="arrow-down">
+            <img
+              src="img/arrow-down.svg"
+              width="47px"
+              height="47px"
+              alt="arrow pointing down"
+            />
+          </div> -->
         </div>
-        <img
-          class="img-yellow"
-          src="img/620X920.png"
-          alt="illustration in yellow colors"
-        />
+        <a href=""
+          ><img
+            class="img-yellow"
+            src="img/yellow_darkyellow-all-lines.png"
+            alt="illustration in yellow colors"
+        /></a>
       </div>
       <div class="spacing"></div>
       <section class="child">
@@ -75,7 +84,15 @@
             <h2 class="project-title-media">Odaalida.com</h2>
             <div class="animation-parent">
               <a href="project-one.html">
-                <h2 class="project-title-media line-animation">View project</h2>
+                <h2
+                  class="
+                    project-title-media
+                    line-animation
+                    project-title-media-bold
+                  "
+                >
+                  View project
+                </h2>
               </a>
             </div>
           </div>
@@ -84,15 +101,23 @@
       <section class="child">
         <div class="child-container">
           <div class="background-img backgroundimg2"></div>
-          <div class="bg-line bg-line2">
-            <h2 class="project-title-media">ReThink — Vaccine</h2>
-            <div class="animation-parent">
-              <a href="project-one.html">
-                <h2 class="project-title-media line-animation">
-                  View project
-                </h2></a
-              >
-            </div>
+          <div class="mq-bg-square-clickable">
+            <a href="project-one.html">
+              <div class="bg-line bg-line2">
+                <h2 class="project-title-media">ReThink — Vaccine</h2>
+                <div class="animation-parent">
+                  <h2
+                    class="
+                      project-title-media
+                      line-animation
+                      project-title-media-bold
+                    "
+                  >
+                    View project
+                  </h2>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </section>
@@ -103,7 +128,12 @@
             <h2 class="project-title-media">Rudolf Steinerskolan</h2>
             <div class="animation-parent">
               <a href="project3.html">
-                <h2 class="project-title-media line-animation">
+                <h2
+                  class="
+                    project-title-media project-title-media-bold
+                    line-animation
+                  "
+                >
                   View project
                 </h2></a
               >
@@ -118,7 +148,13 @@
             <h2 class="project-title-media">Smoove — Light Cycle</h2>
             <div class="animation-parent">
               <a href="projet4.html">
-                <h2 class="project-title-media line-animation">
+                <h2
+                  class="
+                    project-title-media
+                    line-animation
+                    project-title-media-bold
+                  "
+                >
                   View project
                 </h2></a
               >
@@ -129,10 +165,11 @@
       <section class="child">
         <div class="image-fit textbox color-textbox">
           <div class="text-container-quote">
+            <img src="img/quote-alt-right.png" alt="quote mark icon" />
             <p class="paragraph-quote">
-              "I also love; bargain second hand, play board games, drink cava,
+              I also love; bargain second hand, play board games, drink cava,
               watch Friends (the TV-show), photograph other people's dogs
-              (allergic), travel, eat ice cream."
+              (allergic), travel, eat ice cream.
             </p>
           </div>
         </div>
