--- a/info.html
+++ b/info.html
@@ -28,7 +28,6 @@
           <div id="mylinks" class="my-menu">
             <a class="menu-categori" href="project.html">Projects</a>
             <a class="menu-categori" href="forfun.html">A grid of fun</a>
-            <!-- <a class="menu-categori" href="about.html">About me</a> -->
             <a class="menu-categori" href="info.html">Info</a>
           </div>
         </div>
@@ -36,9 +35,9 @@
         <div class="info-wrapper">
           <div class="first-part-incl-img">
             <div class="first-part-container">
-              <h2 class="h2-info">Hi! I am Oda Alida Bjørke</h2>
+              <h2 class="h2-info h2-info-mq">Hi! I am Oda Alida Bjørke</h2>
               <div class="media-h2-img-wrapper">
-                <h2 class="h2-hide h2-info">Hi! I am Oda Alida Bjørke</h2>
+                <h2 class="h2-hide">Hi! I am Oda Alida Bjørke</h2>
                 <img
                   class="media-info-portrait"
                   src="img/Group 11oda_portrait.png"
@@ -75,8 +74,34 @@
           <h2 class="h2-info">Resume</h2>
           <p class="paragraph-info yellow-word">Click here</p>
         </div>
+        <footer class="footer">
+          <div class="footer-container">
+            <h2 class="work-together page-hover">Let's work together!</h2>
+            <h3 class="footer-left">hello@odaalida.com</h3>
+            <div class="social-buttons">
+              <img
+                src="img/instagram.svg"
+                width="44px"
+                height="44px"
+                alt="instagram button"
+              />
+              <a
+                href="www.linkedin.com/in/oda-alida-bjørke-54652938
+              "
+                target="_blank"
+                ><img
+                  src="img/linkedin.svg"
+                  width="44px"
+                  height="44px"
+                  alt="linkedin button"
+              /></a>
+            </div>
+            <h3 class="copywright">Oda Alida©2021</h3>
+          </div>
+        </footer>
       </main>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
