--- a/project-two.html
+++ b/project-two.html
@@ -14,6 +14,7 @@
     <main class="flex-container">
       <div class="header">
         <a class="logo logo-project1" href="index.html">O A</a>
+        <a class="logo-media" href="index.html">ODA ALIDA</a>
         <nav class="topnav">
           <a id="menu-btn" class="nav-button" href="#"
             ><img src="img/menu.svg" width="30px" alt="menu-button"
@@ -29,30 +30,31 @@
       </div>
       <!-- header starts -->
       <section class="child">
-        <div class="child-container">
+        <div class="child-container bg-container-breakp">
           <div class="project-img project-img1"></div>
           <div class="project-color-rectangle project-color-rectangle1">
             <div class="project-row1">
-              <h2>ReThink — Vaccine</h2>
+              <h2 class="inside-project-title-media">ReThink</h2>
             </div>
             <div class="project-row2">
               <div class="project-column2">
-                <h4>Role</h4>
-                <p>UX-design</p>
-                <p>UI-design</p>
-                <p>Copywriting</p>
+                <h4 class="h4-project-media">Role</h4>
+                <p class="p-project-media">UI-design</p>
+                <p class="p-project-media">Web-design</p>
               </div>
               <div class="project-column2">
-                <h4>Tools</h4>
-                <p>Sketch</p>
+                <h4 class="h4-project-media">Tools</h4>
+                <p class="p-project-media">Visual Studio Code</p>
+                <p class="p-project-media">HTML & CSS</p>
               </div>
               <div class="project-column2">
-                <h4>Team</h4>
-                <p>Solo</p>
+                <h4 class="h4-project-media">Team</h4>
+                <p class="p-project-media">Oda Alida Bjøre</p>
+                <p class="p-project-media">Matthew Lalala</p>
               </div>
               <div class="project-column2">
-                <h4>Case</h4>
-                <p>Vaccine</p>
+                <h4 class="h4-project-media">Case</h4>
+                <p class="p-project-media">Portfolio</p>
               </div>
             </div>
           </div>
