--- a/project-three.html
+++ b/project-three.html
@@ -14,6 +14,7 @@
     <main class="flex-container">
       <div class="header">
         <a class="logo logo-project1" href="index.html">O A</a>
+        <a class="logo-media" href="index.html">ODA ALIDA</a>
         <nav class="topnav">
           <a id="menu-btn" class="nav-button" href="#"
             ><img src="img/menu.svg" width="30px" alt="menu-button"
